# so2-hw-2024

./: .gitignore  CMakeLists.txt  README.md  common.h  hw2004st.c  hw2024mp.c  hw2024sp.c  input.csv  list_operations.c  main.c  makefile  read_text_file.c  test.c  write_output.c  write_text_file.c
common/: common.h  list_operations.c  read_text_file.c  round_down_to_decimal.c  to_lower.c  write_text_file.c
multi-process-version/: deserialize_list.c  free_list.c  hw2024mp.c  interface_with_user.c  read_text_file.c  reverse_list.c  serialize_list.c
single-process-version/: common.h  hw2024sp.c  read_csv_and_build_list.c  read_text_file.c  to_lower.c
